Change first page to be the Getting Started help page, unless the user dismisses it. Add checkbox to allow the user to dismiss the help page. Change breadcrumb links to include the help page as the first link unless the user dismisses that help page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1079 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -19,16 +19,16 @@
                     </form>
                 </div>
                 <ul>
-                  <li class="home">
-                    <a href="{% url simplekey-index %}">Home</a>
-                  </li>
-                  <li class="plant-id">
-                    <a href="{% url simplekey-page 1 %}">Plant Identifier</a>
-                  </li>
-                  <li class="my-plants"><a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a></li>
-                  <li class="advanced-id">
-                    <a href="{% url advanced-id-tools %}">Advanced ID Tools</a>
-                  </li>
+                    <li class="home">
+                        <a href="{% url simplekey-index %}">Home</a>
+                    </li>
+                    <li class="plant-id">
+                        <a href="{% if 'skip_help_start' in request.COOKIES.keys and request.COOKIES.skip_help_start == 'y' %}{% url simplekey-page 1 %}{% else %}/help/start/{% endif %}">Plant Identifier</a>
+                    </li>
+                    <li class="my-plants"><a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a></li>
+                    <li class="advanced-id">
+                        <a href="{% url advanced-id-tools %}">Advanced ID Tools</a>
+                    </li>
                     <li class="teaching-tools"><a href="#">Teaching Tools</a></li>
                     <li class="about last"><a href="#">About</a></li>
                 </ul>
