--- a/gobotany/simplekey/templates/simplekey/_old_base.html
+++ b/gobotany/simplekey/templates/simplekey/_old_base.html
@@ -16,13 +16,7 @@
     <div id="content">
       {% include "simplekey/header.html" %}
       <div id="navlinks">
-        <p>Home | Plant of the Day |
-            {% ifnotequal request.path "/simple/" %}
-                <a href="{% url simplekey-page 1 %}">Plant Identifier</a>
-            {% else %}
-                <a class="current">Plant Identifier</a>
-            {% endifnotequal %}
-        | Learning Opportunities</p>
+        <p>Home | Plant of the Day | Plant Identifier | Learning Opportunities</p>
       </div>
       {% block content %}{% endblock %}
       <div id="foot">
