Add link to first Choose Group page in breadcrumb navigation when Start: Help is the first link, in order to make it easier to start over without going back to the Help page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1083 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -14,9 +14,10 @@
                             {% if 'skip_help_start' in request.COOKIES.keys and request.COOKIES.skip_help_start != 'y' %}
                                 <li class="first completed"><a href="/help/start/"><img
                                     src="/static/images/icons/start.png" alt=""> Start: Help</a></li>
-                                <li class="second current"><a><img
-                                        src="/static/images/icons/group.png" alt=""> Choose
-                                        Group</a></li>
+                                <li class="second current"><a 
+                                    {% if page.number > 1 %}href="{% url simplekey-page 1 %}"{% endif %}><img
+                                    src="/static/images/icons/group.png" alt=""> Choose
+                                    Group</a></li>
                                 <li class="third upcoming"><a><img
                                     src="/static/images/icons/group.png" alt=""> Group</a></li>
                                 <li class="last upcoming"><a><img 
