--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -8,7 +8,7 @@
             <!--Navigation-->
             <nav>
                 <div id="search">
-                    <form id="search-suggest" action="/simple/search" autocomplete="off">
+                    <form id="search-suggest" action="/search" autocomplete="off">
                         <button>Search</button>
                         <input type="text" name="q" placeholder="Search..."
                             value="{{ request.GET.q }}">
