--- a/gobotany/simplekey/templates/simplekey/rulertest.html
+++ b/gobotany/simplekey/templates/simplekey/rulertest.html
@@ -25,7 +25,7 @@ Ruler Widget Test
         </p>
       </form>
     </div>
-    <p id="help-nav"><a href="/simple/help">Help</a></p>
+    <p id="help-nav"><a href="/help/">Help</a></p>
     {% include "simplekey/filter_working.html" %}
     <form id="results-display">
       <label for="image-type-selector">Show:</label>
