--- a/gobotany/simplekey/templates/simplekey/search_suggest.html
+++ b/gobotany/simplekey/templates/simplekey/search_suggest.html
@@ -1,4 +1,4 @@
-  <form id="search-suggest" action="/simple/search/" autocomplete="off">
+  <form id="search-suggest" action="/search/" autocomplete="off">
     <input type="text" name="q" value="{{ request.GET.q }}">
     <button>Search</button>
     <div class="hidden">
