Fix cursor style for links on plant preview popups.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1093 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -890,6 +890,7 @@ by javascript, see gobotany.sk.results.notify() */
 }
 
 #plant-preview div.photos a {
+    cursor: pointer;
     padding: 0 1em;
 }
 
