Slight cleanup; and dijit now wants HorizontalSlider to be required.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1113 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -12,11 +12,8 @@
            parseOnLoad: true,
        };
     </script>
-    <script src="/dojo/dojo/dojo.js" type="text/javascript"></script>
+    <script src="/static/dojo/dojo.js" type="text/javascript"></script>
 
-    <link rel="stylesheet"
-          href="/dojo/dijit/themes/claro/claro.css"
-          type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8" /> 
 {% else %}
     <script type="text/javascript">
 	djConfig = { 
@@ -32,7 +29,9 @@
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript"></script>
 
-    <link rel="stylesheet"
-          href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css"
-          type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8" /> 
 {% endif %}
+
+<link rel="stylesheet"
+      href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css"
+      type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8"
+      />
