Replaced invalid empty src="" with a small image to prevent browser errors.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1127 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -23,7 +23,7 @@
                   {% endif %}
               {% endfor %}
           {% else %}
-              <img src="" alt="not available">
+              <img src="/static/nothing.png" alt="not available">
           {% endif %}
       </p>
       <p class="nav"><a>&lt; prev</a> <span>? of ?</span>
@@ -71,15 +71,15 @@
       {% else %}
           {# temporary dummy presentation until we have data #}
           <div>
-              <img src="" alt="placeholder image 1">
+              <img src="/static/nothing.png" alt="placeholder image 1">
               <p>placeholder caption 1</p>
           </div>
           <div>
-              <img src="" alt="placeholder image 2">
+              <img src="/static/nothing.png" alt="placeholder image 2">
               <p>placeholder caption 2</p>
           </div>
           <div>
-              <img src="" alt="placeholder image 3">
+              <img src="/static/nothing.png" alt="placeholder image 3">
               <p>placeholder caption 3</p>
           </div>
       {% endif %}
