--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -12,7 +12,7 @@ About Go-Botany
         {{ section_1_content_blurb|safe }}
     </div>
 </div>
-<img class="about" src="" alt="section 1 image TBD">
+<img class="about" src="/static/nothing.png" alt="section 1 image TBD">
 <hr>
 <div class="about">
     <h2>{{ section_2_heading_blurb }}</h2>
@@ -20,7 +20,7 @@ About Go-Botany
         {{ section_2_content_blurb|safe }}
     </div>
 </div>
-<img class="about" src="" alt="section 2 image TBD">
+<img class="about" src="/static/nothing.png" alt="section 2 image TBD">
 <hr>
 <div class="about">
     <h2>{{ section_3_heading_blurb }}</h2>
@@ -28,5 +28,5 @@ About Go-Botany
         {{ section_3_content_blurb|safe }}
     </div>
 </div>
-<img class="about" src="" alt="section 3 image TBD">
+<img class="about" src="/static/nothing.png" alt="section 3 image TBD">
 {% endblock %}
