--- a/gobotany/simplekey/templates/simplekey/plant_preview.html
+++ b/gobotany/simplekey/templates/simplekey/plant_preview.html
@@ -1,7 +1,7 @@
       <p id="preview-intro">(this is intro text for screen readers)</p>
       <h3></h3>
       <div class="photos">
-          <img src="" alt="not available">
+          <img src="/static/nothing.png" alt="not available">
           <p class="nav"><a>&lt; prev</a> <span>? of ?</span>
              <a>next &gt;</a></p>
       </div>
