--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -32,7 +32,7 @@
                       {% endif %}
                   {% endfor %}
               {% else %}
-                  <img src="" alt="not available">
+                  <img src="/static/nothing.png" alt="not available">
               {% endif %}
           </p>
           <p class="nav"><a>&lt; prev</a> <span>? of ?</span>
