Tweaked dojobase.html in case anyone ever tries Dojo debug mode again (Rocky?).
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1134 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -1,4 +1,4 @@
-<!-- dojobase.html -->
+<!-- start dojobase.html -->
 
 {% if debug_dojo %}
     <script type="text/javascript">
@@ -6,8 +6,10 @@
            isDebug: true,
            debugAtAllCosts: true,
            useXDomain: false,
+           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/static/js/',
            modulePaths: {
-               gobotany: '/static/gobotany'
+               gobotany: '/static/gobotany',
+               layers: '/static/js/layers'
            },
            parseOnLoad: true,
        };
@@ -46,3 +48,5 @@
       href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css"
       type="text/css" media="screen" title="Dijit Claro Style" charset="utf-8"
       />
+
+<!-- end dojobase.html -->
