--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!--JQuery-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+        <script src="/static/jquery-1.6.min.js"></script>
         <!--Global JS File-->
         <script type="text/javascript" src="/static/scripts/global.js"></script>
         <!--Shadowbox-->
@@ -38,7 +38,7 @@
         </script>
         <!--Image Gallery Slider-->
         <script type="text/javascript"
-            src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
+            src="/static/jquery.tools.min.js"></script>
         <script type="text/javascript">
             $(function() {
                 //Start
