--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1116,3 +1116,107 @@ div.working-area #simple-slider .count {
     border-bottom: 1px dashed;
     cursor: pointer;
 }
+
+/* Help navigation styles */
+#help-nav {
+    color: #666;
+}
+
+#help-nav a.current {
+    color: #000;
+}
+#help-nav a.current:hover {
+    text-decoration: none;
+}
+
+#help-nav ul ul {
+    margin: 0.5em 0 0.2em 0;
+}
+
+#help-nav ul ul li {
+    margin-left: 1em;
+}
+
+/*///////////////////////////**
+Getting Started Page Styles
+////////////////////////////*/
+.question {
+	padding: 18px 0 18px 45px;	
+	border-bottom: 1px solid #e2dfcb;
+}
+.first.question {
+	margin: 11px 0 0 0;
+	border-top: 1px solid #e2dfcb;
+	background: url(../images/icons/1.png) left 18px no-repeat;	
+}
+
+.second.question {
+	background: url(../images/icons/2.png) left 18px no-repeat;	
+}
+.third.question {
+	background: url(../images/icons/3.png) left 18px no-repeat;	
+}
+.fourth.question {
+	background: url(../images/icons/4.png) left 18px no-repeat;	
+}
+.fifth.question {
+	background: url(../images/icons/5.png) left 18px no-repeat;	
+}
+.sixth.question {
+	margin: 0 0 11px 0;
+	background: url(../images/icons/6.png) left 18px no-repeat;	
+}
+a.screenshot {
+	display: none;
+	float: right;	
+	margin: 0 0 0 15px;
+	color: #1A2E11;
+	text-align: center;
+}
+a.screenshot:hover {
+	text-decoration: none;	
+}
+a.screenshot img.screenshot-thumb {
+	display: block;	
+	margin: 0 0 5px 0;
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);	
+}
+.question ul {
+	padding: 0 0 0 15px;
+	list-style-type: disc;	
+}
+.question h4 {
+	margin: 0 0 15px 0;
+	background: url(../images/icons/plus.png) right 50% no-repeat;	
+	cursor: pointer;
+}
+.first.question h4 {
+	background: none;
+	cursor: default;	
+}
+a.onward-btn {
+	display: block;
+	float: right;
+	width: 280px;
+	height: 32px;
+	margin: 10px 0 0 0;
+	background: url(../images/layout/onward-btn.png) 0 0 no-repeat transparent;
+	text-indent: -9000px;	
+}
+a.onward-btn:hover {
+	background-position: 0 -32px;	
+}
+a.onward-btn:active {
+	background-position: 0 -64px;	
+}
+label.got-it {
+	display: block;
+	float: left;
+	margin: 19px 0 0 0;	
+}
+label.got-it input {
+	margin: 0 5px 0 0;	
+}
+
