--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1140,63 +1140,63 @@ div.working-area #simple-slider .count {
 /*///////////////////////////**
 Getting Started Page Styles
 ////////////////////////////*/
-.question {
+#getting-started .question {
 	padding: 18px 0 18px 45px;	
 	border-bottom: 1px solid #e2dfcb;
 }
-.first.question {
+#getting-started .first.question {
 	margin: 11px 0 0 0;
 	border-top: 1px solid #e2dfcb;
 	background: url(../images/icons/1.png) left 18px no-repeat;	
 }
 
-.second.question {
+#getting-started .second.question {
 	background: url(../images/icons/2.png) left 18px no-repeat;	
 }
-.third.question {
+#getting-started .third.question {
 	background: url(../images/icons/3.png) left 18px no-repeat;	
 }
-.fourth.question {
+#getting-started .fourth.question {
 	background: url(../images/icons/4.png) left 18px no-repeat;	
 }
-.fifth.question {
+#getting-started .fifth.question {
 	background: url(../images/icons/5.png) left 18px no-repeat;	
 }
-.sixth.question {
+#getting-started .sixth.question {
 	margin: 0 0 11px 0;
 	background: url(../images/icons/6.png) left 18px no-repeat;	
 }
-a.screenshot {
+#getting-started a.screenshot {
 	display: none;
 	float: right;	
 	margin: 0 0 0 15px;
 	color: #1A2E11;
 	text-align: center;
 }
-a.screenshot:hover {
+#getting-started a.screenshot:hover {
 	text-decoration: none;	
 }
-a.screenshot img.screenshot-thumb {
+#getting-started a.screenshot img.screenshot-thumb {
 	display: block;	
 	margin: 0 0 5px 0;
 	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);	
 }
-.question ul {
+#getting-started .question ul {
 	padding: 0 0 0 15px;
 	list-style-type: disc;	
 }
-.question h4 {
+#getting-started .question h4 {
 	margin: 0 0 15px 0;
 	background: url(../images/icons/plus.png) right 50% no-repeat;	
 	cursor: pointer;
 }
-.first.question h4 {
+#getting-started .first.question h4 {
 	background: none;
 	cursor: default;	
 }
-a.onward-btn {
+#getting-started a.onward-btn {
 	display: block;
 	float: right;
 	width: 280px;
@@ -1205,18 +1205,18 @@ a.onward-btn {
 	background: url(../images/layout/onward-btn.png) 0 0 no-repeat transparent;
 	text-indent: -9000px;	
 }
-a.onward-btn:hover {
+#getting-started a.onward-btn:hover {
 	background-position: 0 -32px;	
 }
-a.onward-btn:active {
+#getting-started a.onward-btn:active {
 	background-position: 0 -64px;	
 }
-label.got-it {
+#getting-started label.got-it {
 	display: block;
 	float: left;
 	margin: 19px 0 0 0;	
 }
-label.got-it input {
+#getting-started label.got-it input {
 	margin: 0 5px 0 0;	
 }
 
