--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -77,6 +77,9 @@ background-position: 0 -20px;
 /***Active Nav State***/
 #home li.home a,
 #plant-id li.plant-id a,
+#plant-id-2 li.plant-id a,
+#plant-id-3 li.plant-id a,
+#getting-started li.plant-id a,
 #myplants li.myplants a,
 #advanced-id li.advanced-id a,
 #teaching-tools li.teaching-tools a,
